[FIX] Text Alignment

--- a/pages/rankings/style.module.scss
+++ b/pages/rankings/style.module.scss
@@ -16,6 +16,7 @@
         font-size: 2.5rem;
         font-weight: 600;
         margin-bottom: 0;
+        text-align: center;
     }
 
     &_container {
